apps/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
        app.kubernetes.io/instance: prometheus
        app.kubernetes.io/name: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          ports:
          - containerPort: 9090
            name: http
          volumeMounts:
            - name: prometheus-data
              mountPath: /prometheus
          securityContext:
            fsGroup: 2000
            runAsNonRoot: true
            runAsUser: 1000
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
