apps/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
  type: ClusterIP
