apps/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
spec:
  rules:
    - host: prometheus.apps.prod.devinforyou.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus
                port:
                  name: http
